LUCENE-1059: various small fixes based on code inspection from Tzvika Barenholz
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@598296 13f79535-47bb-0310-9956-ffa450edef68